# go2_hardware_interface

./: CMakeLists.txt  README.md  package.xml
go2_hal/: CMakeLists.txt  README.md
go2_hal/cmake/: go2halConfig.cmake.in
go2_hal/include/go2_hal/: go2_hal.h
go2_hal/src/: go2_hal.cpp  python_interface.cpp
go2_hal/test/: CMakeLists.txt  test_go2_hal.cpp  test_python_interface.py
include/go2_interface/: go2_robot_hw.hpp  go2_ros_control.hpp
src/: go2_robot_hw.cpp  go2_ros_control.cpp  go2_ros_node.cpp
